Sat Jul 17 19:40:25 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* doc/apibuild.py doc/gamin-api.xml doc/gamin-refs.xml: some
	  doc extraction processing based on libxml2 tool
	* libgamin/fam.h libgamin/gam_api.c libgamin/gam_data.c
	  libgamin/gam_error.h libgamin/gam_protocol.h: cleanup in the
	  process of generating the XML description.

Fri Jul 16 13:42:37 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in configure.in: preparing 0.0.2 release
	* libgamin/gam_api.c libgamin/gam_data.c libgamin/gam_data.h:
	  made the client side restartable, i.e. if the server exists
	  a new connection is made and monitors are reestablished
	  seems to work more or less okay.
	* TODO: updated.

Tue Jul 13 15:41:24 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_data.c libgamin/gam_api.c: fixed FAMMonitorDirectory2()
	  and FAMMonitorFile2() they should now implement the correct behaviour
	* server/gam_dnotify.c server/gam_node.c server/gam_node.h
	  server/gam_poll.c server/gam_server.c server/gam_tree.c: removed
	  threading and locking, this should still work for the current
	  constraints
	* tests/testing.c: adding wait and updated to allow
	  FAMMonitorDirectory2 testing with an extra arg to mondir
	* TODO: updated

Fri Jun 18 15:28:32 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/fam.h libgamin/gam_api.c: the new version of the
	  FAMCONNECTION_GETFD macro was buggy. Applied patch from
	  hadess.

Fri Jun 18 14:25:04 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* autogen.sh: drop special dependancies a given version of the
	  autotools

Fri Jun 18 14:12:59 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_protocol.h server/gam_connection.h: workaround
	  gtk-doc parsing limitations
	* configure.in Makefile.am gamin.spec.in libgamin/Makefile.am:
	  emulation of libfam wasn't sufficient to compile fam-dependant
	  code as pointed by hadess
